@@ -30,6 +30,8 @@
   *  - Extend USB_GetDeviceConfigDescriptor() routine to require the configuration number within the device to fetch
   *  - Added new USE_INTERNAL_SERIAL define for using the unique serial numbers in some AVR models as the USB device's serial number,
   *    added NO_INTERNAL_SERIAL compile time option to turn off new serial number reading code
+  *  - Fixed ADC driver for the ATMEGA32U4 and ATMEGA16U4 (thanks to Opendous Inc.)
+  *
   *
   *  \section Sec_ChangeLog090605 Version 090605
   *
